--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Upload Pages artifact 📦
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./dist
@@ -37,5 +37,5 @@ jobs:
       name: github-pages
 
     steps:
-      - name: Deploy to GitHub Pages 🚀
+      - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
